logs/desktop_commander_server_0_20251007_100057.log
  File "E:\ECHO_XV4\MLS\servers\desktop_commander_server.py", line 29
    logging.basicConfig(
                       ^
SyntaxError: '(' was never closed
